--- a/djangochat/core/templates/core/base.html
+++ b/djangochat/core/templates/core/base.html
@@ -29,6 +29,9 @@
 
         {% block content %}
         {% endblock %}
+
+        {% block scripts %}
+        {% endblock %}
         
     </body>
 
