--- a/djangochat/room/templates/room/room.html
+++ b/djangochat/room/templates/room/room.html
@@ -22,7 +22,7 @@
 
         <button 
             class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700"
-            if="chat-message-submit">
+            id="chat-message-submit">
             Submit
         </button>
     </form>
@@ -32,9 +32,12 @@
 {% block scripts %}
 
     {{ room.slug|json_script:"json-roomname" }}
+    {{ request.user.username|json_script:"json-username" }}
 
     <script>
         const roomName = JSON.parse(document.getElementById('json-roomname').textContent);
+        const userName = JSON.parse(document.getElementById('json-username').textContent);
+
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
@@ -45,10 +48,40 @@
 
         chatSocket.onmessage = function(e) {
             console.log('onmessage')
+
+            const data = JSON.parse(e.data);
+
+            if (data.message) {
+                let html = '<div class="p-4 bg-gray-200 rounded-xl">';
+                    html += '<p class="font-semibold">' + data.username + '</p>';
+                    html += '<p>' + data.message + '</p></div>';
+
+                document.querySelector('#chat-messages').innerHTML += html;
+            }
+            else {
+                alert('The message was empty !')
+            }
         }
 
         chatSocket.onclose = function(e) {
             console.log('onclose')
+        }
+
+        //
+
+        document.querySelector('#chat-message-submit').onclick = function(e) {
+            e.preventDefault();
+
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+
+            chatSocket.send(JSON.stringify({
+                'message': message,
+                'username': userName,
+                'room': roomName
+            }));
+
+            messageInputDom.value = '';
         }
 
     </script>
