--- a/djangochat/room/templates/room/room.html
+++ b/djangochat/room/templates/room/room.html
@@ -59,6 +59,8 @@
                     html += '<p>' + data.message + '</p></div>';
 
                 document.querySelector('#chat-messages').innerHTML += html;
+
+                scrollToBottom();
             }
             else {
                 alert('The message was empty !')
@@ -84,6 +86,13 @@
             }));
 
             messageInputDom.value = '';
+
+            return false;
+        }
+
+        function scrollToBottom(){
+            const objDiv = document.querySelector('#chat-messages');
+            objDiv.scrollTop = objDiv.scrollHeight;
         }
 
     </script>
